# md-word-count

./: Cargo.toml  README.md
src/: bin.rs  lib.rs
